--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<link rel="shortcut icon" href="_/img/favicon.ico">
 
-	<link rel="stylesheet" href="_/css/style.css">
+	<link rel="stylesheet" href="style.css">
 	<!--[if IE]><link rel="stylesheet" type="text/css" href="_/css/ie.css"><![endif]-->
 
 
