--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
 	 
 
-	<link rel="shortcut icon" href="_/img/favicon.ico">
+	<link rel="shortcut icon" href="assets/img/favicon.ico">
 
 	<link rel="stylesheet" href="style.css">
 	<!--[if IE]><link rel="stylesheet" type="text/css" href="_/css/ie.css"><![endif]-->
@@ -33,7 +33,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,400italic' rel='stylesheet' type='text/css'>
 	
 	<!-- all our JS is at the bottom of the page, except for Modernizr. -->
-	<script src="_/js/modernizr-1.7.min.js"></script>
+	<script src="assets/js/modernizr-1.7.min.js"></script>
 
 </head>
 
@@ -76,7 +76,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 <script>window.jQuery || document.write("<script src='_/js/jquery-1.5.1.min.js'>\x3C/script>")</script>
 
-<script src="_/js/functions.js"></script>
+<script src="assets/js/functions.js"></script>
 	 
 <script>
 
