--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-<script>window.jQuery || document.write("<script src='_/js/jquery-1.5.1.min.js'>\x3C/script>")</script>
+<script>window.jQuery || document.write("<script src='assets/js/jquery-1.5.1.min.js'>\x3C/script>")</script>
 
 <script src="assets/js/functions.js"></script>
 	 
