put css back in assets folder

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	<link rel="shortcut icon" href="assets/img/favicon.ico">
 
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 	<!--[if IE]><link rel="stylesheet" type="text/css" href="_/css/ie.css"><![endif]-->
 
 
@@ -47,7 +47,7 @@
 		
 		<section id="about">
 			<div class="bio hidden group">
-				<img class="headshot" src="_/img/headshot.jpg" alt="Erin Manning" title="Erin Manning" />
+				<img class="headshot" src="assets/img/headshot.jpg" alt="Erin Manning" title="Erin Manning" />
 				<p>&hellip; is a designer living in Dayton (Midwest Ohio for y'all out-of-towners), who loves to think and create.</p>
 				<p>She has an obsession with learning, mostly about design and web development, as well as a lot of other nerdy subjects. For the curious few, you could also describe her as an eco-minded, bread and coffee loving, crochet rockin&#146; mommy with a penchant for <em>good</em> science fiction.</p>
 				<p>Interested in collaboration? Send a <a href="mailto:info@erinmanning.net?Subject=Why%20Hello%20There">quick message</a> with the details.</p>
