--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
 	<nav id="socialmedia">
 		<ul class="socialmedia group">				
 			<li><a class="work" href="http://www.behance.net/ErinManning" title="Check out my work on Behance">Works</a></li>
-			<!--<li><a class="blog" href="http://scriptogr.am/erinmanning" title="Read my Tumblr">Blogs</a>-->
+			<li><a class="blog" href="http://erin-manning.tumblr.com" title="Read my Tumblr">Blogs</a>
 			<li><a class="twitter" href="http://www.twitter.com/_erinmanning" title="Follow me on Twitter">Tweets</a></li>
 			<li><a class="books" href="http://www.goodreads.com/user/show/6088668-erin-manning" title="See my bookshelf">Reads</a></li>
+			<!-- <li><a class="pics" href="http://www.instagram.com/_erinmanning" title="View my Instagram">Snaps</a></li> -->
 			<li><a class="music" href="http://www.last.fm/user/ejmanning84" title="See my latest listens on Last.fm">Rocks</a></li>
 		</ul>
 	</nav>	
